--- a/src/main/resources/swagger/css/screen.css
+++ b/src/main/resources/swagger/css/screen.css
@@ -1231,7 +1231,7 @@
   cursor: pointer;
 }
 .swagger-section #header {
-  background-color: #ff00ff;
+  background-color: #0A5F7F;
   padding: 14px;
 }
 .swagger-section #input_baseUrl {
