--- a/src/main/resources/swagger/css/screen.css
+++ b/src/main/resources/swagger/css/screen.css
@@ -1231,7 +1231,7 @@
   cursor: pointer;
 }
 .swagger-section #header {
-  background-color: #0A5F7F;
+  background-color: #009fdf;
   padding: 14px;
 }
 .swagger-section #input_baseUrl {
@@ -1263,7 +1263,7 @@
   padding: 6px 8px;
   font-size: 0.9em;
   color: white;
-  background-color: #547f00;
+  background-color: #052c3d;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   -o-border-radius: 4px;
@@ -1272,7 +1272,7 @@
   border-radius: 4px;
 }
 .swagger-section #explore:hover {
-  background-color: #547f00;
+  background-color: #052c3d;
 }
 .swagger-section #header #logo {
   font-size: 1.5em;
